# llm-council

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  pyproject.toml  railway.toml  start.sh
.github/workflows/: test.yml
backend/: agent_storage.py  auth.py  config.py  council.py  main.py  openrouter.py  prompt_storage.py  prompts.py  storage.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  main.jsx
frontend/src/components/: AgentManager.css  AgentManager.jsx  AuthWrapper.css  AuthWrapper.jsx  ChatInterface.css  ChatInterface.jsx  PromptManager.css  PromptManager.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx
frontend/src/data/: models.js
scripts/: migrate_data.py
tests/: README.md  conftest.py
tests/backend/: test_agent_storage.py  test_council.py  test_main.py  test_openrouter.py  test_prompt_storage.py  test_storage.py
